yaml/istio.global-resources.yaml
# hook up an ingress gateway
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
    # to setup TLS you must also configure a cert here, through cert-manager, manual setup, etc
    # - port:
    #      number: 443
    #      name: https
    #      protocol: HTTPS
    #   hosts:
    #      - "*"
    #   tls:
    #      mode: SIMPLE
    #      serverCertificate: /tmp/tls.crt
    #      privateKey: /tmp/tls.privateKey
---
# all services use mTLS incoming connections within the cluster (HTTP can still serve ingress traffic)
# apiVersion: "authentication.istio.io/v1alpha1"
# kind: "MeshPolicy"
# metadata:
#   name: "default"
# spec:
#   peers:
#     - mtls: {}
---
# all services must use mTLS outgoing connections (HTTP can still be used on outbound egress traffic)
# apiVersion: "networking.istio.io/v1alpha3"
# kind: "DestinationRule"
# metadata:
#   name: "default"
#   namespace: "istio-system"
# spec:
#   host: "*"
#   trafficPolicy:
#     tls:
#       mode: ISTIO_MUTUAL
